Fix layout 3 video spacing, Polish Layout 9

--- a/theme/style_base.css
+++ b/theme/style_base.css
@@ -407,12 +407,15 @@ img.fillheight {
 #rblayout-three #profil-actions div { margin: 0px 0px 15px 0px; }
 #rblayout-three #profile-actions div a { margin: 0px 0px 10px 0px; }
 #rblayout-three #tab-panels .column { margin: 0px 0px 15px 0px }
+#rblayout-three #tab-panels .column .video-container { position: relative; padding-bottom: 56.25%; padding-top: 30px; height: 0; overflow: hidden; }
+#rblayout-three #tab-panels .column .video-container iframe,
+#rblayout-three #tab-panels .column .video-container object,
+#rblayout-three #tab-panels .column .video-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
 #rblayout-three #tab-panels .column .tab-panel { overflow: hidden; padding: 15px; background: #e9e9e9; }
 #rblayout-three #tab-panels .column .tab-panel p { margin: 0px 0px 15px 0px }
-#rblayout-three #tab-panels .column .tab-panel ul { margin: 0px 0px 0px 15px; list-style: disc; }
 #rblayout-three #tab-panels .row-photos div.photo { float: left; width: 160px; height: 160px; margin: 10px; overflow: hidden; background-color: #e9e9e9; border: 7px solid #fff; }
 #rblayout-three #tab-panels .row-photos div.photo:hover { box-shadow: 0 0 3px #aaa; }
-#rblayout-three #tab-panels .row-photos div.photo a { float: left; width: 100%; height: 100%; overflow: hidden; background-size: cover; background-position: center top; background-repeat: no-repeat;  }
+#rblayout-three #tab-panels .row-photos div.photo a { float: left; width: 100%; height: 100%; overflow: hidden; background-size: cover; background-position: center top; background-repeat: no-repeat; }
 #rblayout-three .row-two { overflow: hidden; margin: 20px 0 0 0; }
 #rblayout-three .row-two #subMenuTab { overflow: hidden; }
 #rblayout-three .row-two #subMenuTab a { float: left; border-left: 1px solid #fff; padding: 10px 20px; color: #555; background: url(style/bg-tab.png) repeat-x }
@@ -503,7 +506,7 @@ img.fillheight {
 #rblayout-nine .mCSB_scrollTools .mCSB_buttonLeft { left: 30px; width: 46px; height: 18px; background: url(../style/layout9-prev.png) no-repeat; }
 #rblayout-nine .mCSB_scrollTools .mCSB_buttonRight { right: 30px; width: 60px; height: 18px; background: url(../style/layout9-next.png) no-repeat; }
 #rblayout-nine #info { text-align: center; }
-#rblayout-nine #info #name { text-transform: uppercase; }
+#rblayout-nine #info #name { text-transform: uppercase; margin: 15px 0px; }
 #rblayout-nine #stats li { display: inline-block; padding: 0 5px; font-weight: bold; }
 #rblayout-nine #stats li strong { font-weight: normal; }
 #rblayout-nine #links { width: 200px; padding: 0 15px; position: absolute; right: -185px; top: 0px; z-index: 5; background: rgba(255,255,255,0.5); text-align: left; }
